--- a/src/main/resources/com/example/automatingtextprocessing/hello-view.fxml
+++ b/src/main/resources/com/example/automatingtextprocessing/hello-view.fxml
@@ -5,12 +5,26 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.automatingtextprocessing.HelloController">
+<?import javafx.scene.text.Font?>
+<VBox xmlns="http://javafx.com/javafx/23.0.1"
+      xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.example.automatingtextprocessing.HelloController"
+      alignment="CENTER"
+      spacing="20.0"
+      prefWidth="600" prefHeight="400">
+
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets top="30" right="30" bottom="30" left="30"/>
     </padding>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Label text="Test Processing System">
+        <font>
+            <Font size="24" />
+        </font>
+    </Label>
+
+    <Label text="Welcome! Perform real time automation of large dataset." />
+
+    <Button text="Go to Dashboard" onAction="#handleGoToDashboard"/>
+    <Button text="Exit" onAction="#handleExit"/>
 </VBox>
